fix: improve contrasts and remove flickering cursor on pit and rit forms

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -82,14 +82,6 @@ p {
   border-radius: var(--border-radius-lg);
   padding: 2rem;
   box-shadow: var(--shadow-md);
-  cursor: default;
-}
-
-.form-header {
-  cursor: default;
-  .section-title {
-    cursor: default;
-  }
 }
 
 .surface {
